--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>登録者数リアルタイム</title>
 
   <link rel="stylesheet" href="output.css">
-  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js" async
-    defer></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+    integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+    crossorigin="anonymous" async defer></script>
 </head>
 <body>
   <header class="fixed top-0 navbar bg-base-300 px-40">
@@ -153,147 +154,151 @@
   </div>
 
   <script>
-    // Normal mode JavaScript
+    try {
+      // Normal mode JavaScript
 
-    {
-      $('#stop').attr('disabled', 'disabled');
+      {
+        $('#stop').attr('disabled', 'disabled');
 
-      $('#show').on('click', () => {
-        $('#show').attr('disabled', 'disabled');
-        $('#channel-url').attr('disabled', 'disabled');
+        $('#show').on('click', () => {
+          $('#show').attr('disabled', 'disabled');
+          $('#channel-url').attr('disabled', 'disabled');
 
-        $('#stop').removeAttr('disabled');
+          $('#stop').removeAttr('disabled');
 
-        let id = $('#channel-url').val().replace('https://youtube.com/channel/', '');
+          let id = $('#channel-url').val().replace('https://youtube.com/channel/', '');
 
-        $('#channel-name').text('ロード中...');
-        $('#subscribers').text('ロード中...');
-        $('#views').text('ロード中...');
-        $('#channel-icon').attr('src', './images.png');
+          $('#channel-name').text('ロード中...');
+          $('#subscribers').text('ロード中...');
+          $('#views').text('ロード中...');
+          $('#channel-icon').attr('src', './images.png');
 
-        const reload = setInterval(() => {
+          const reload = setInterval(() => {
 
-          $.ajax(`https://mixerno.space/api/youtube-channel-counter/user/${id}`).done(data => {
-            data = JSON.parse(data);
+            $.ajax(`https://mixerno.space/api/youtube-channel-counter/user/${id}`).done(data => {
+              data = JSON.parse(data);
 
-            let subsNUpdated = $('#subscribers-hidden').text();
-            let viewsNUpdated = $('#views-hidden').text();
+              let subsNUpdated = $('#subscribers-hidden').text();
+              let viewsNUpdated = $('#views-hidden').text();
 
-            const channelNameSlice = data.user[0].count.length > 20 ? (data.user[0].count).slice(0, 20) + "…" : data.user[0].count;
+              const channelNameSlice = data.user[0].count.length > 20 ? (data.user[0].count).slice(0, 20) + "…" : data.user[0].count;
 
-            $('#channel-name').text(channelNameSlice);
-            $('#subscribers').text((data.counts[0].count).toLocaleString());
-            $('#views').text((data.counts[3].count).toLocaleString());
-            $('#subscribers-hidden').text(data.counts[0].count);
-            $('#views-hidden').text(data.counts[3].count);
+              $('#channel-name').text(channelNameSlice);
+              $('#subscribers').text((data.counts[0].count).toLocaleString());
+              $('#views').text((data.counts[3].count).toLocaleString());
+              $('#subscribers-hidden').text(data.counts[0].count);
+              $('#views-hidden').text(data.counts[3].count);
 
-            let subsUpdated = $('#subscribers-hidden').text();
-            let viewsUpdated = $('#views-hidden').text();
+              let subsUpdated = $('#subscribers-hidden').text();
+              let viewsUpdated = $('#views-hidden').text();
 
-            let subsDeIncrease = subsUpdated - subsNUpdated;
-            let viewsDeIncrease = viewsUpdated - viewsNUpdated;
+              let subsDeIncrease = subsUpdated - subsNUpdated;
+              let viewsDeIncrease = viewsUpdated - viewsNUpdated;
 
-            if (subsDeIncrease < 0) $('#subs-de-increase').text(subsDeIncrease.toLocaleString())
-            else $('#subs-de-increase').text(`+${subsDeIncrease.toLocaleString()}`);
+              if (subsDeIncrease < 0) $('#subs-de-increase').text(subsDeIncrease.toLocaleString())
+              else $('#subs-de-increase').text(`+${subsDeIncrease.toLocaleString()}`);
 
-            if (viewsDeIncrease < 0) $('#views-de-increase').text(viewsDeIncrease.toLocaleString())
-            else $('#views-de-increase').text(`+${viewsDeIncrease.toLocaleString()}`);
+              if (viewsDeIncrease < 0) $('#views-de-increase').text(viewsDeIncrease.toLocaleString())
+              else $('#views-de-increase').text(`+${viewsDeIncrease.toLocaleString()}`);
 
-            $('#channel-icon').attr('src', data.user[1].count);
+              $('#channel-icon').attr('src', data.user[1].count);
 
-          });
-
-          if (!(String($('#channel-url').val()).startsWith('https://youtube.com/channel/'))) {
-            $('#error-alert').show(400, () => {
-              $('#error-alert')
-
-              $('#error-alert').removeAttr('style');
-              $('#error-alert').removeClass('hidden');
             });
 
-            $('#error-alert-close').on('click', () => {
+            if (!(String($('#channel-url').val()).startsWith('https://youtube.com/channel/'))) {
+              $('#error-alert').show(400, () => {
+                $('#error-alert')
 
-              $('#error-alert').hide(400, () => {
                 $('#error-alert').removeAttr('style');
-                $('#error-alert').addClass('hidden');
+                $('#error-alert').removeClass('hidden');
               });
 
-              $('#show').removeAttr('disabled');
-              $('#channel-url').removeAttr('disabled');
+              $('#error-alert-close').on('click', () => {
 
-              $('#stop').attr('disabled', 'disabled');
-            });
+                $('#error-alert').hide(400, () => {
+                  $('#error-alert').removeAttr('style');
+                  $('#error-alert').addClass('hidden');
+                });
+
+                $('#show').removeAttr('disabled');
+                $('#channel-url').removeAttr('disabled');
+
+                $('#stop').attr('disabled', 'disabled');
+              });
+
+              $('#channel-name').text('名前');
+              $('#subscribers').text('0');
+              $('#views').text('0');
+              $('#channel-icon').attr('src', './images.png');
+
+              clearInterval(reload);
+            }
+          }, 2000);
+
+          $('#stop').on('click', () => {
+            clearInterval(reload);
 
             $('#channel-name').text('名前');
             $('#subscribers').text('0');
             $('#views').text('0');
+
+            $('#show').removeAttr('disabled');
+            $('#channel-url').removeAttr('disabled');
             $('#channel-icon').attr('src', './images.png');
 
-            clearInterval(reload);
-          }
-        }, 2000);
+            $('#stop').attr('disabled', 'disabled');
 
-        $('#stop').on('click', () => {
-          clearInterval(reload);
-
-          $('#channel-name').text('名前');
-          $('#subscribers').text('0');
-          $('#views').text('0');
-
-          $('#show').removeAttr('disabled');
-          $('#channel-url').removeAttr('disabled');
-          $('#channel-icon').attr('src', './images.png');
-
-          $('#stop').attr('disabled', 'disabled');
-
-          $('#error-alert').hide(400, () => {
-            $('#error-alert').removeAttr('style');
-            $('#error-alert').addClass('hidden');
+            $('#error-alert').hide(400, () => {
+              $('#error-alert').removeAttr('style');
+              $('#error-alert').addClass('hidden');
+            });
           });
         });
-      });
+      }
+
+      // Compare mode JavaScript
+      // let channelsArr = [
+      //   2, 1
+      // ];
+
+      // $('#add').on('click', () => {
+      //   if ($('.form-control.mt-10.text-left').length < 5) {
+      //     const newChannel = document.createElement('div');
+
+      //     channelsArr.unshift(channelsArr[0] + 1);
+
+      //     newChannel.classList.add('form-control');
+      //     newChannel.classList.add('text-left');
+      //     newChannel.classList.add('mt-10');
+      //     newChannel.id = `channel${channelsArr[0]}`
+
+      //     newChannel.innerHTML = `<label class="label">
+      //         <span class="label-text">
+      //           チャンネル名${channelsArr[0]}
+      //         </span>
+      //       </label>
+      //       <label class="input-group">
+      //         <span>URL</span>
+      //         <input type="text" class="input input-bordered input-accent"
+      //           placeholder="URL..." id="channel-name${channelsArr[0]}">
+      //       </label>`
+
+      //     document.getElementById('form-wrapper').appendChild(newChannel);
+      //   } else {
+
+      //   }
+      // });
+
+      // $('#delete').on('click', () => {
+      //   if ($('.form-control.mt-10.text-left').length > 2) {
+      //     const deleteChannel = channelsArr.shift();
+
+      //     document.getElementById(`channel${deleteChannel}`).remove();
+      //   }
+      // });
+    } catch (error) {
+      alert(`エラーが発生しました: ${error}`);
     }
-
-    // Compare mode JavaScript
-    // let channelsArr = [
-    //   2, 1
-    // ];
-
-    // $('#add').on('click', () => {
-    //   if ($('.form-control.mt-10.text-left').length < 5) {
-    //     const newChannel = document.createElement('div');
-
-    //     channelsArr.unshift(channelsArr[0] + 1);
-
-    //     newChannel.classList.add('form-control');
-    //     newChannel.classList.add('text-left');
-    //     newChannel.classList.add('mt-10');
-    //     newChannel.id = `channel${channelsArr[0]}`
-
-    //     newChannel.innerHTML = `<label class="label">
-    //         <span class="label-text">
-    //           チャンネル名${channelsArr[0]}
-    //         </span>
-    //       </label>
-    //       <label class="input-group">
-    //         <span>URL</span>
-    //         <input type="text" class="input input-bordered input-accent"
-    //           placeholder="URL..." id="channel-name${channelsArr[0]}">
-    //       </label>`
-
-    //     document.getElementById('form-wrapper').appendChild(newChannel);
-    //   } else {
-
-    //   }
-    // });
-
-    // $('#delete').on('click', () => {
-    //   if ($('.form-control.mt-10.text-left').length > 2) {
-    //     const deleteChannel = channelsArr.shift();
-
-    //     document.getElementById(`channel${deleteChannel}`).remove();
-    //   }
-    // });
   </script>
 </body>
 </html>
