--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="output.css">
   <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
     integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
-    crossorigin="anonymous" async defer></script>
+    crossorigin="anonymous" async></script>
 </head>
 <body>
   <header class="fixed top-0 navbar bg-base-300 px-40">
