--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>登録者数リアルタイム</title>
 
   <link rel="stylesheet" href="output.css">
-  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
     crossorigin="anonymous" async></script>
 </head>
