--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div id="subscribers-hidden"></div>
     <div id="views-hidden"></div>
   </div>
-
+  <!-- Programming is literally sucks, Do not try creating this at home! -->
   <script>
     try {
       // Normal mode JavaScript
