--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- Programming is literally sucks, Do not try creating this at home! -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-    crossorigin="anonymous" async></script>
+    crossorigin="anonymous"></script>
   <script>
     try {
       // Normal mode JavaScript
