--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Primary Meta Tags -->
   <title>登録者数リアルタイム</title>
+  <meta name="title" content="登録者数リアルタイム">
+  <meta name="description" content="登録者数をリアルタイムで表示させます。">
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url"
+    content="https://curious-george-nine.github.io/subscribers-count/">
+  <meta property="og:title" content="登録者数リアルタイム">
+  <meta property="og:description" content="登録者数をリアルタイムで表示させます。">
+  <meta property="og:image" content="./og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url"
+    content="https://curious-george-nine.github.io/subscribers-count/">
+  <meta property="twitter:title" content="登録者数リアルタイム">
+  <meta property="twitter:description" content="登録者数をリアルタイムで表示させます。">
+  <meta property="twitter:image" content="./og-image.png">
+
+  <!-- Icon -->
   <link rel="stylesheet" href="output.css">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#b91d47">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <header class="fixed top-0 navbar bg-base-300 px-40">
